--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-plugin-streaming-media",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "description": "This plugin allows you to stream audio and video in a fullscreen, native player on iOS and Android.",
   "main": "index.js",
   "scripts": {
@@ -21,7 +21,8 @@
   "author": "Nicholas Hutchind",
   "contributors": [
       "Timothy Shamilov",
-      "Michael Robinson"
+      "Michael Robinson",
+      "Jerod Fritz"
   ],
   "license": "MIT",
   "bugs": {
